--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
     <div class="content">
         <h3>SAF (Smart Affiliate Future)</h3>
         <p>
-            SAF adalah platform modern berbasis Affiliate Network Marketing yang memberikan peluang bisnis kepada siapa saja untuk mendapatkan penghasilan tambahan dengan mudah, transparan, dan sesuai dengan prinsip syariah.
-SAF menghubungkan berbagai produk digital, fisik, dan jasa berkualitas melalui sistem komisi yang adil, inovatif, dan dirancang untuk mendukung siapa saja—baik yang mencari pekerjaan utama maupun penghasilan sampingan. Dengan memanfaatkan teknologi dan internet, SAF menjadi solusi bisnis yang dapat diakses oleh semua kalangan.
-Platform ini juga dirancang untuk mendukung wirausaha di Indonesia agar dapat meraih kesuksesan dengan modal minim hingga gratis, teknologi yang mudah digunakan, dan sistem yang telah teruji. Dengan SAF, siapapun—baik pelajar, ibu rumah tangga, karyawan, hingga pensiunan—bisa mendapatkan penghasilan tambahan tanpa perlu pengalaman bisnis sebelumnya.
+            <b>SAF</b> adalah Platform modern berbasis <b>Affiliate Network Marketing</b> yang memberikan peluang bisnis kepada siapa saja untuk mendapatkan penghasilan tambahan dengan mudah, transparan, dan sesuai dengan prinsip syariah.</p>
+<p>SAF menghubungkan berbagai produk digital, fisik, dan jasa berkualitas melalui sistem komisi yang adil, inovatif, dan dirancang untuk mendukung siapa saja—baik yang mencari pekerjaan utama maupun penghasilan sampingan. Dengan memanfaatkan teknologi dan internet, SAF menjadi solusi bisnis yang dapat diakses oleh semua kalangan.</p>
+<p>Platform ini juga dirancang untuk mendukung wirausaha di Indonesia agar dapat meraih kesuksesan dengan modal minim hingga gratis, teknologi yang mudah digunakan, dan sistem yang telah teruji. Dengan SAF, siapapun—baik pelajar, ibu rumah tangga, karyawan, hingga pensiunan—bisa mendapatkan penghasilan tambahan tanpa perlu pengalaman bisnis sebelumnya.</p>
         </p>
     </div>
 
@@ -198,12 +198,10 @@ Platform ini juga dirancang untuk mendukung wirausaha di Indonesia agar dapat me
     <p>
         <b>Sistem Affiliate Network Marketing</b> adalah model bisnis yang memberikan komisi berdasarkan penjualan produk nyata melalui jaringan yang Anda bangun. Dalam SAF:
     </p>
-        <p>● Anda mempromosikan produk menggunakan link referral unik Anda.</p>
-        <p>● Jika ada pembelian melalui link tersebut, Anda mendapatkan komisi langsung.</p>
-        <p>● Anda juga bisa mendapatkan komisi tambahan dari penjualan jaringan Anda hingga <b>10 Generasi/level</b> dan <b>Repeat Order</b>.</p>
-    <p>
-        Semakin banyak jaringan aktif yang Anda bangun, semakin besar potensi penghasilan Anda.
-    </p>
+        <p>●Anda mempromosikan produk menggunakan link referral unik Anda.</p>
+        <p>●Jika ada pembelian melalui link tersebut, Anda mendapatkan komisi langsung.</p>
+        <p>●Anda juga bisa mendapatkan komisi tambahan dari penjualan jaringan Anda hingga <b>10 Generasi/level</b> dan <b>Repeat Order</b>.</p>
+        <p>●Semakin banyak jaringan aktif yang Anda bangun, semakin besar potensi penghasilan Anda.</p>
 </div>
 
 <div class="content">
