--- a/index.html
+++ b/index.html
@@ -198,10 +198,14 @@
     <p>
         <b>Sistem Affiliate Network Marketing</b> adalah model bisnis yang memberikan komisi berdasarkan penjualan produk nyata melalui jaringan yang Anda bangun. Dalam SAF:
     </p>
-        <p>● Anda  mempromosikan  produk  menggunakan link referral unik Anda.</p>
-        <p>● Jika ada pembelian melalui  link  terse- but, Anda mendapatkan komisi langsung.</p>
-        <p>● Anda juga bisa mendapatkan komisi tamba- han dari penjualan jaringan Anda hingga <b>10 Generasi/level</b> dan <b>Repeat Order</b>.</p>
-        <p>● Semakin banyak jaringan aktif yang  Anda bangun, semakin besar potensi penghasilan Anda.</p>
+        <p>● Anda mempromosikan produk menggunakan
+            link referral unik Anda.</p>
+        <p>● Jika ada pembelian melalui link terse-
+            but, Anda mendapatkan komisi langsung.</p>
+        <p>● Anda juga bisa mendapatkan komisi tam-
+            bahan dari penjualan jaringan Anda hingga <b>10 Generasi/level</b> dan <b>Repeat Order</b>.</p>
+        <p>● Semakin banyak jaringan aktif yang
+            Anda bangun, semakin besar potensi penghasilan Anda.</p>
 </div>
 
 <div class="content">
