--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     </p>
 </div>
 
-    <div class="content">
+<div class="content">
     <h3>Apa yang Membuat SAF Berbeda?</h3>
     <p>
         <b>Bukan MLM, Money Game, Investasi Bodong, atau Sistem Piramida</b>
@@ -256,6 +256,7 @@
         </li>
     </ul>
     <p>
+    </div>
        
         <div class="content">
         <h3>Keunggulan SAF</h3>
@@ -286,7 +287,8 @@
     </ul>
     <p>
     </div>
-        <div>
+    
+        <div> class="content">
             <h3>Kesimpulan: Apa Itu SAF?</h3>
     <p>
         <b>Smart Affiliate Future</b> adalah platform bisnis berbasis syariah yang menawarkan peluang penghasilan tambahan melalui penjualan produk digital, fisik, dan jasa. Dengan sistem <b>Affiliate Network Marketing</b> yang adil, transparan, dan mudah digunakan, SAF memberikan kemudahan, potensi penghasilan besar, dan dukungan penuh untuk membantu Anda sukses.
