--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
         <b>Potensi Penghasilan Besar</b>
     </p>
     <ul>
-        <li><b>Komisi Langsung:</b> Dapatkan komisi langsung dari setiap penjualan produk.</li>
-        <li><b>Komisi Jaringan hingga 10 Level:</b> Potensi pendapatan dari jaringan yang aktif hingga level ke-10, termasuk dari <b>Repeat Order.</b></li>
+        <li><b>Komisi Langsung:</b> Dapatkan komisi langsung dari setiap penjualan produk dan Repeat order Atau di sebut juga komisi Generasi/level 1, komisi ini untuk Anggota Basic dan juga Anggota premium.</li>
+        <li><b>Komisi Jaringan hingga 10 Generasi/Level:</b> Potensi pendapatan dari jaringan yang aktif hingga Generasi ke-10, termasuk dari <b>Repeat Order, komisi ini khusus anggota premium.</b></li>
         <li><b>Bonus:</b>
             <ul>
                 <li><b>Bonus Spesial</b></li>
@@ -262,7 +262,7 @@
         <h3>Keunggulan SAF</h3>
     </p>
     <ul>
-        <li><b>Berbasis Syariah:</b> Berbasis penjualan produk nyata, bebas riba, gharar, dan maysir. Mengutamakan manfaat produk untuk konsumen.</li>
+        <li><b>Berbasis Syariah:</b> Berbasis penjualan produk nyata, bebas riba, gharar (penipuam), dan maysir (judi), tidak ada unsur pemaksaan semua dilakukan atas dasar suka rela. Jelas Akadnya yaitu jual beli dan Mengutamakan manfaat produk untuk konsumen serta komisi dan bonus diberikan karena hasil kerja.</li>
         <li><b>Fleksibel dan Mudah Dijalankan:</b> Cocok untuk pelajar, ibu rumah tangga, karyawan, hingga pensiunan. Tidak membutuhkan keahlian khusus; cukup dengan smartphone dan koneksi internet. Dukungan materi promosi gratis.</li>
     </ul>
     <p>
@@ -270,7 +270,7 @@
     </p>
     <ul>
         <li>Dapat memasarkan produk atau jasa pribadi melalui platform SAF dengan sistem yang sama Affiliasi Network Marketing.</li>
-        <li>Dapatkan landing page eksklusif untuk produk Anda.</li>
+        <li>Dapatkan landing page/Web Profesional untuk promosi seperti yang sedang baca.</li>
     </ul>
     <p>
         </div>
@@ -280,16 +280,60 @@
     </p>
     <ul>
         <li><b>Fleksibilitas:</b> Bisa dijalankan kapan saja dan di mana saja.</li>
-        <li><b>Tanpa Risiko:</b> Tidak ada kewajiban membeli produk atau membayar biaya keanggotaan.</li>
-        <li><b>Dukungan Maksimal:</b> Materi promosi, pelatihan, dan panduan bisnis tersedia untuk membantu Anda sukses.</li>
+        <li><b>Tanpa Risiko:</b> Tidak ada kewajiban membeli produk atau membayar biaya keanggotaan atau pendaftaran.</li>
+        <li><b>Dukungan Maksimal:</b> Materi promosi, Full support dan panduan bisnis tersedia untuk membantu Anda sukses.</li>
         <li><b>Komunitas Wirausaha:</b> Bergabunglah dengan komunitas yang mendukung dan inspiratif.</li>
         <li><b>Passive Income:</b> Pendapatan dari jaringan dan <b>Repeat Order</b>, menciptakan penghasilan berkelanjutan tanpa batasan waktu.</li>
     </ul>
     <p>
     </div>
+
+
+    <div class="content">
+    <h3>Jenis Keanggotaan di SAF</h3>
+    <p>
+        Di SAF (Smart Affiliate Future), terdapat dua jenis anggota, yaitu <b>Anggota Basic</b> dan <b>Anggota Premium</b>.
+    </p>
+
+    <h4>1. Anggota Basic</h4>
+    <p>
+        <b>Anggota Basic</b> adalah anggota yang dapat bergabung di SAF secara <b>gratis</b> tanpa perlu melakukan pembelian produk.
+    </p>
+    <p><b>Kelebihan Anggota Basic:</b></p>
+    <ul>
+        <li><b>Pendaftaran Gratis:</b> Tidak ada biaya awal untuk bergabung bisa Upgrade menjadi anggota premium kapan saja dengan cara membeli produk.</li>
+        <li><b>Akses Materi Promosi:</b> Mendapatkan akses ke materi promosi seperti gambar, video, atau informasi produk untuk membantu pemasaran.</li>
+        <li><b>Web/Landing Page Profesional Gratis:</b> Dapat menggunakan landing page khusus anggota Basic yang disediakan SAF untuk promosi produk.</li>
+        <li><b>Komisi Langsung:</b> Tetap mendapatkan komisi dari penjualan produk melalui link referral dan juga Repeat order.</li>
+        <li><b>Fleksibilitas Waktu:</b> Cocok bagi pemula yang ingin mencoba tanpa risiko.</li>
+    </ul>
+    <p>
+        Namun, <b>Anggota Basic</b> tidak mendapatkan keuntungan tambahan seperti komisi jaringan atau peluang menjual produk pribadi.
+    </p>
+
+    <h4>2. Anggota Premium</h4>
+    <p>
+        <b>Anggota Premium</b> adalah mereka yang telah dengan suka rela membeli produk SAF apa saja akan mendapatkan akses penuh ke semua fitur yang disediakan oleh SAF.
+    </p>
+    <p><b>Keuntungan yang akan di dapat Anggota Premium:</b></p>
+    <ul>
+        <li><b>Komisi Jaringan:</b> akan mendapatkan komisi hingga <b>10 Generasi/level</b> dari jaringan aktif yang mereka bangun.</li>
+        <li><b>Komisi dari Repeat Order:</b> Passive income dari pesanan ulang pelanggan setia.</li>
+        <li><b>Akses Penjualan Produk/Jasa Pribadi:</b> Bisa menjual produk atau jasa mereka sendiri melalui sistem SAF dengan model Affiliate Network Marketing.</li>
+        <li><b>Gratis Landing Page /Web Eksklusif:</b> SAF menyediakan landing page profesional untuk anggota Premium seperti yang sedang anda baca.</li>
+        <li><b>Bonus Tambahan:</b> akan mendapatkan berbagai bonus seperti Bonus Spesial, Bonus Tambahan, dan Bonus Cuma-cuma.</li>
+        <li><b>Dukungan Eksklusif:</b> Mendapatkan pelatihan, panduan bisnis, dan konsultasi untuk membantu kesuksesan bisnis mereka.</li>
+        <li><b>Peluang Passive Income:</b> Mendapatkan penghasilan berkelanjutan dari jaringan aktif dan repeat order, bahkan saat tidak bekerja aktif.</li>
+    </ul>
+
+    <p>
+        Dengan sistem yang dirancang untuk mendukung setiap anggotanya, baik <b>Anggota Basic</b> maupun <b>Anggota Premium</b> memiliki peluang untuk sukses di SAF sesuai dengan kebutuhan dan tujuan mereka.
+    </p>
+</div>
+
     
-        <div> class="content">
-            <h3>Kesimpulan: Apa Itu SAF?</h3>
+        <div class="content">
+        <h3>Kesimpulan</h3>
     <p>
         <b>Smart Affiliate Future</b> adalah platform bisnis berbasis syariah yang menawarkan peluang penghasilan tambahan melalui penjualan produk digital, fisik, dan jasa. Dengan sistem <b>Affiliate Network Marketing</b> yang adil, transparan, dan mudah digunakan, SAF memberikan kemudahan, potensi penghasilan besar, dan dukungan penuh untuk membantu Anda sukses.
     </p>
