--- a/index.html
+++ b/index.html
@@ -112,8 +112,12 @@
             font-size: 1.5em;
             font-weight: bold;
             color: #000;
-            text-align: center;
+            text-align: left;
         }
+
+    p {
+        text-align: left;
+    }
 
         ul {
             padding-left: 5px;
