--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
             100% { background-color: #FFFF00; }
         }
     </style>
+
+    <style>
+    p {
+        text-align: left;
+    }
+</style>
+
+
+    
 </head>
 <body>
     <header>
