--- a/index.html
+++ b/index.html
@@ -171,13 +171,11 @@
         }
     </style>
 
-    <style>
-    p {
+        <style>
+    body, p, h1, h2, h3, h4, h5, h6, div, span, ul, li {
         text-align: left;
     }
 </style>
-
-
     
 </head>
 <body>
