--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+⁹<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -64,7 +64,7 @@
 
         .welcome-animation {
             text-align: center;
-            font-size: 1.7em;
+            font-size: 1.8em;
             font-family: 'Rubik', sans-serif;
             color: #8B0000;
             text-shadow: 2px 2px 4px #fff;
@@ -75,7 +75,7 @@
 
         .welcome-animation span {
             display: inline-block;
-            animation: scroll-text 5s linear infinite;
+            animation: scroll-text 15s linear infinite;
         }
 
         @keyframes scroll-text {
