--- a/index.html
+++ b/index.html
@@ -342,6 +342,14 @@
     </p>
 </div>
 
+    <div class="content">
+    <h3>Mengapa SAF Mudah Dijalankan?</h3>
+    <p><b>Hanya Perlu Share Link Referral:</b> Dengan membagikan link referral Anda, produk SAF bisa dipromosikan secara mudah dan online.</p>
+    <p><b>Tanpa Modal Besar:</b> Anggota basic bisa memulai tanpa biaya dan mendapatkan penghasilan dari penjualan langsung.</p>
+    <p><b>Pilihan Produk yang Luas:</b> Dengan produk digital, fisik, dan jasa yang beragam, Anda memiliki banyak pilihan untuk dipromosikan.</p>
+    <p><b>Sistem Online 100%:</b> Semua proses dilakukan online, mulai dari pendaftaran, promosi, hingga pembayaran komisi.</p>
+</div>
+
     
         <div class="content">
         <h3>Kesimpulan</h3>
