--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         }
 
         .welcome-animation {
-            text-align: center;
+            text-align: left;
             font-size: 1.8em;
             font-family: 'Rubik', sans-serif;
             color: #8B0000;
             text-shadow: 2px 2px 4px #fff;
-            margin: 20px 0;
+            margin: 2px 0;
             overflow: hidden;
             white-space: nowrap;
         }
@@ -344,10 +344,10 @@
 
     <div class="content">
     <h3>Mengapa SAF Mudah Dijalankan?</h3>
-    <p><b>Hanya Perlu Share Link Referral:</b> Dengan membagikan link referral Anda, produk SAF bisa dipromosikan secara mudah dan online.</p>
-    <p><b>Tanpa Modal Besar:</b> Anggota basic bisa memulai tanpa biaya dan mendapatkan penghasilan dari penjualan langsung.</p>
-    <p><b>Pilihan Produk yang Luas:</b> Dengan produk digital, fisik, dan jasa yang beragam, Anda memiliki banyak pilihan untuk dipromosikan.</p>
-    <p><b>Sistem Online 100%:</b> Semua proses dilakukan online, mulai dari pendaftaran, promosi, hingga pembayaran komisi.</p>
+    <p><b>● Hanya Perlu Share Link Referral:</b> Dengan membagikan link referral Anda, produk SAF bisa dipromosikan secara mudah dan online.</p>
+    <p><b>● Tanpa Modal Besar:</b> Anggota basic bisa memulai tanpa biaya dan mendapatkan penghasilan dari penjualan langsung.</p>
+    <p><b>● Pilihan Produk yang Luas:</b> Dengan produk digital, fisik, dan jasa yang beragam, Anda memiliki banyak pilihan untuk dipromosikan.</p>
+    <p><b>● Sistem Online 100%:</b> Semua proses dilakukan online, mulai dari pendaftaran, promosi, hingga pembayaran komisi.</p>
 </div>
 
     
