--- a/index.html
+++ b/index.html
@@ -350,6 +350,9 @@
     <p><b>● Sistem Online 100%:</b> Semua proses dilakukan online, mulai dari pendaftaran, promosi, hingga pembayaran komisi.</p>
 </div>
 
+<div class="content">
+    <p><b>"Di SAF, sistem yang kami terapkan berlandaskan pada prinsip syariah, sehingga tujuan utama kami bukan hanya mencari keuntungan materi, tetapi juga berikhtiar untuk membantu sesama mendapatkan penghasilan yang halal serta meraih ridho Allah SWT. Dengan berikhtiar di SAF, Anda tidak hanya memperoleh penghasilan, tetapi juga menjalankan perintah-Nya dan mendekatkan diri kepada keberkahan."</b></p>
+</div>
     
         <div class="content">
         <h3>Kesimpulan</h3>
