--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             flex-wrap: wrap;
             justify-content: center;
             gap: 10px;
-            background-color: #FFFACD;
-            padding: 5px;
+            background-color: #FF8C00;
+            padding: 3px;
             border: 2px solid #FFFACD;
             position: sticky;
             top: 60px;
@@ -47,8 +47,8 @@
         nav a {
             display: block;
             background-color: #FF8C00;
-            border: 2px solid #D2691E;
-            padding: 5px 10px;
+            border: 2px solid #FF8C00;
+            padding: 2px 5px;
             color: #000;
             text-decoration: none;
             font-size: 0.8em;
@@ -64,7 +64,7 @@
 
         .welcome-animation {
             text-align: left;
-            font-size: 1.8em;
+            font-size: 1.7em;
             font-family: 'Rubik', sans-serif;
             color: #8B0000;
             text-shadow: 2px 2px 4px #fff;
