--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
         <b>Smart Affiliate Future</b> adalah platform bisnis berbasis syariah yang menawarkan peluang penghasilan tambahan melalui penjualan produk digital, fisik, dan jasa. Dengan sistem <b>Affiliate Network Marketing</b> yang adil, transparan, dan mudah digunakan, SAF memberikan kemudahan, potensi penghasilan besar, dan dukungan penuh untuk membantu Anda sukses.
     </p>
     <p>
-        SAF adalah pilihan tepat bagi Anda yang ingin memulai bisnis tanpa risiko besar.
+        SAF adalah pilihan tepat bagi Anda yang ingin memulai bisnis tanpa risiko besar dan sesuai syariah.
     </p>
     <p>
         <b>Siapapun bisa sukses di SAF</b>, bahkan tanpa pengalaman bisnis sebelumnya.
